빌드 오류 수정
중복 적용 되었던 'android:name' 속성을 별도의 <activity> 태그로 분리

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:theme="@style/Theme.MyApplication">
         <activity
             android:name=".SnakeGameActivity"
+            android:exported="false" />
+        <activity
             android:name=".BattleActivity"
             android:exported="false" />
         <activity
