오류파일 무시

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 .externalNativeBuild
 .cxx
 local.properties
+/.idea/misc.xml
+/.idea/vcs.xml
+/.idea/shelf/Uncommitted_changes_before_Checkout_at_2025-12-08__4_13__Changes_.xml
+/.idea/deploymentTargetSelector.xml
+/.idea/vcs.xml
+/.idea/shelf/Changes.xml
